Add missing rows in hero points/losses pages
Specifically:
* Losses: 1309-1320
* Hero Points: 1369-1380

Thanks @Thalhammer for spotting those gaps in the data.

--- a/stats/leaderboards/hero-points.html
+++ b/stats/leaderboards/hero-points.html
@@ -35958,6 +35958,321 @@
 <td>10413</td>
 </tr>
 </tbody>
+<!--/WARHAWK_SVML/stats/Stats_CareerLeaderboard.jsp?start=1368&end=1379&statsStart=0&statsEnd=21&sortCol=20&sortOrder=1&gameMode=1-->
+<tbody>
+<tr>
+<td>1369</td>
+<td>PHILIPINO</td>
+<td>660738</td>
+<td>257609</td>
+<td>170336</td>
+<td>266299</td>
+<td>9194731</td>
+<td>162947</td>
+<td>65766</td>
+<td>2.4776785</td>
+<td>0.20978555</td>
+<td>4816</td>
+<td>4784</td>
+<td>1.006689</td>
+<td>4.3116302</td>
+<td>63417</td>
+<td>15189</td>
+<td>554189</td>
+<td>21042</td>
+<td>9421.77</td>
+<td>2806.8616</td>
+<td>181447.22</td>
+<td>5598</td>
+<td>1303</td>
+</tr>
+<tr>
+<td>1370</td>
+<td>omar00844</td>
+<td>466475</td>
+<td>213141</td>
+<td>123721</td>
+<td>148896</td>
+<td>7848175</td>
+<td>115914</td>
+<td>74071</td>
+<td>1.564904</td>
+<td>0.16416888</td>
+<td>3754</td>
+<td>6777</td>
+<td>0.5539324</td>
+<td>3.5662432</td>
+<td>9631</td>
+<td>13057</td>
+<td>393756</td>
+<td>37408</td>
+<td>13331.936</td>
+<td>3884.8828</td>
+<td>103638.24</td>
+<td>5578</td>
+<td>7045</td>
+</tr>
+<tr>
+<td>1371</td>
+<td>danish99</td>
+<td>167261</td>
+<td>81445</td>
+<td>45221</td>
+<td>43994</td>
+<td>3821772</td>
+<td>35836</td>
+<td>27947</td>
+<td>1.2822844</td>
+<td>0.18050124</td>
+<td>1449</td>
+<td>2753</td>
+<td>0.5263349</td>
+<td>2.6259181</td>
+<td>223</td>
+<td>14479</td>
+<td>111780</td>
+<td>29828</td>
+<td>6940.8735</td>
+<td>2043.7826</td>
+<td>18558.684</td>
+<td>5577</td>
+<td>5374</td>
+</tr>
+<tr>
+<td>1372</td>
+<td>Smellybeaver</td>
+<td>206127</td>
+<td>105249</td>
+<td>58155</td>
+<td>50344</td>
+<td>4477310</td>
+<td>51761</td>
+<td>42347</td>
+<td>1.2223061</td>
+<td>0.26472268</td>
+<td>1539</td>
+<td>2337</td>
+<td>0.6585366</td>
+<td>2.7622879</td>
+<td>2457</td>
+<td>7374</td>
+<td>169713</td>
+<td>17614</td>
+<td>6672.559</td>
+<td>9148.562</td>
+<td>11452.383</td>
+<td>5565</td>
+<td>3404</td>
+</tr>
+<tr>
+<td>1373</td>
+<td>iJUSTKILLEDYOU</td>
+<td>386793</td>
+<td>146630</td>
+<td>150975</td>
+<td>103816</td>
+<td>6595309</td>
+<td>143033</td>
+<td>92114</td>
+<td>1.5527824</td>
+<td>0.27694568</td>
+<td>2511</td>
+<td>5732</td>
+<td>0.438067</td>
+<td>3.518801</td>
+<td>82327</td>
+<td>11084</td>
+<td>236458</td>
+<td>42044</td>
+<td>14269.534</td>
+<td>3750.1785</td>
+<td>45273.043</td>
+<td>5564</td>
+<td>9316</td>
+</tr>
+<tr>
+<td>1374</td>
+<td>Vulcan--Raven--</td>
+<td>159165</td>
+<td>38234</td>
+<td>49694</td>
+<td>75790</td>
+<td>2875343</td>
+<td>46159</td>
+<td>12976</td>
+<td>3.5572596</td>
+<td>0.202488</td>
+<td>1335</td>
+<td>1172</td>
+<td>1.1390785</td>
+<td>3.3213081</td>
+<td>1014</td>
+<td>7103</td>
+<td>128849</td>
+<td>14228</td>
+<td>2974.6611</td>
+<td>1926.8347</td>
+<td>92723.34</td>
+<td>5563</td>
+<td>2408</td>
+</tr>
+<tr>
+<td>1375</td>
+<td>FUNGUSS</td>
+<td>431419</td>
+<td>211034</td>
+<td>95570</td>
+<td>142816</td>
+<td>8470894</td>
+<td>89916</td>
+<td>93341</td>
+<td>0.9633066</td>
+<td>0.23499621</td>
+<td>3464</td>
+<td>5672</td>
+<td>0.6107193</td>
+<td>3.0557745</td>
+<td>7313</td>
+<td>11748</td>
+<td>399859</td>
+<td>5685</td>
+<td>15946.813</td>
+<td>5262.727</td>
+<td>71250.09</td>
+<td>5562</td>
+<td>1252</td>
+</tr>
+<tr>
+<td>1376</td>
+<td>yonnex</td>
+<td>73713</td>
+<td>37870</td>
+<td>18375</td>
+<td>19085</td>
+<td>1841917</td>
+<td>16109</td>
+<td>14266</td>
+<td>1.1291883</td>
+<td>0.1904686</td>
+<td>810</td>
+<td>1492</td>
+<td>0.54289544</td>
+<td>2.4011831</td>
+<td>359</td>
+<td>8477</td>
+<td>31896</td>
+<td>20795</td>
+<td>2897.5974</td>
+<td>1651.5109</td>
+<td>26960.951</td>
+<td>5561</td>
+<td>6625</td>
+</tr>
+<tr>
+<td>1377</td>
+<td>AEC312</td>
+<td>88469</td>
+<td>33322</td>
+<td>16293</td>
+<td>41417</td>
+<td>1176320</td>
+<td>14899</td>
+<td>7586</td>
+<td>1.9640126</td>
+<td>0.23723665</td>
+<td>759</td>
+<td>570</td>
+<td>1.331579</td>
+<td>4.5124965</td>
+<td>5630</td>
+<td>3868</td>
+<td>50848</td>
+<td>20770</td>
+<td>1281.5469</td>
+<td>672.3031</td>
+<td>12673.454</td>
+<td>5558</td>
+<td>1795</td>
+</tr>
+<tr>
+<td>1378</td>
+<td>jangofat</td>
+<td>-1999252054</td>
+<td>-999693031</td>
+<td>-999794772</td>
+<td>263410</td>
+<td>25717106</td>
+<td>-999842027</td>
+<td>1000135333</td>
+<td>-0.99970675</td>
+<td>0.17239621</td>
+<td>6538</td>
+<td>15854</td>
+<td>0.41238803</td>
+<td>-4664.41</td>
+<td>5946</td>
+<td>-1999983783</td>
+<td>671396</td>
+<td>24158</td>
+<td>48305.203</td>
+<td>22128.902</td>
+<td>67915.69</td>
+<td>5554</td>
+<td>24675</td>
+</tr>
+<tr>
+<td>1379</td>
+<td>untechsavy</td>
+<td>488881</td>
+<td>215844</td>
+<td>117351</td>
+<td>165408</td>
+<td>10350081</td>
+<td>100230</td>
+<td>102797</td>
+<td>0.97502846</td>
+<td>0.19384219</td>
+<td>4050</td>
+<td>4839</td>
+<td>0.83694977</td>
+<td>2.8340707</td>
+<td>3334</td>
+<td>15512</td>
+<td>398976</td>
+<td>59069</td>
+<td>19091.885</td>
+<td>16876.143</td>
+<td>74491.15</td>
+<td>5547</td>
+<td>6443</td>
+</tr>
+<tr>
+<td>1380</td>
+<td>wottagunn</td>
+<td>225316</td>
+<td>119616</td>
+<td>53054</td>
+<td>56299</td>
+<td>2528244</td>
+<td>47511</td>
+<td>20837</td>
+<td>2.2801268</td>
+<td>0.215308</td>
+<td>1866</td>
+<td>1565</td>
+<td>1.1923323</td>
+<td>5.347174</td>
+<td>4198</td>
+<td>15864</td>
+<td>100384</td>
+<td>95411</td>
+<td>3111.575</td>
+<td>1504.0721</td>
+<td>48662.934</td>
+<td>5544</td>
+<td>3915</td>
+</tr>
+</tbody>
 <!--/WARHAWK_SVML/stats/Stats_CareerLeaderboard.jsp?start=1380&end=1391&statsStart=0&statsEnd=21&sortCol=20&sortOrder=1&gameMode=1-->
 <tbody>
 <tr>
