--- a/stats/leaderboards/losses.html
+++ b/stats/leaderboards/losses.html
@@ -34383,6 +34383,321 @@
 <td>184</td>
 </tr>
 </tbody>
+<!--/WARHAWK_SVML/stats/Stats_CareerLeaderboard.jsp?start=1308&end=1319&statsStart=0&statsEnd=21&sortCol=10&sortOrder=1&gameMode=1-->
+<tbody>
+<tr>
+<td>1309</td>
+<td>T-Bone_Kev93</td>
+<td>354954</td>
+<td>164908</td>
+<td>86611</td>
+<td>119877</td>
+<td>5020686</td>
+<td>76304</td>
+<td>51494</td>
+<td>1.4818037</td>
+<td>0.20757349</td>
+<td>2170</td>
+<td>4734</td>
+<td>0.45838615</td>
+<td>4.2418985</td>
+<td>5296</td>
+<td>6749</td>
+<td>331138</td>
+<td>7173</td>
+<td>11693.13</td>
+<td>2707.6797</td>
+<td>53691.39</td>
+<td>3286</td>
+<td>1312</td>
+</tr>
+<tr>
+<td>1310</td>
+<td>d_general</td>
+<td>306294</td>
+<td>80801</td>
+<td>142643</td>
+<td>94011</td>
+<td>6530950</td>
+<td>134898</td>
+<td>108819</td>
+<td>1.2396549</td>
+<td>0.33110178</td>
+<td>1947</td>
+<td>4731</td>
+<td>0.4115409</td>
+<td>2.8139307</td>
+<td>109037</td>
+<td>5378</td>
+<td>185890</td>
+<td>1007</td>
+<td>19193.152</td>
+<td>1768.559</td>
+<td>35644.043</td>
+<td>3017</td>
+<td>1965</td>
+</tr>
+<tr>
+<td>1311</td>
+<td>Votric777</td>
+<td>292480</td>
+<td>151249</td>
+<td>74437</td>
+<td>87879</td>
+<td>6841224</td>
+<td>64615</td>
+<td>59955</td>
+<td>1.0777249</td>
+<td>0.1619043</td>
+<td>2285</td>
+<td>4726</td>
+<td>0.48349556</td>
+<td>2.565155</td>
+<td>3118</td>
+<td>7939</td>
+<td>263638</td>
+<td>13600</td>
+<td>10194.593</td>
+<td>8716.922</td>
+<td>101887.85</td>
+<td>1411</td>
+<td>2774</td>
+</tr>
+<tr>
+<td>1312</td>
+<td>Smokin-gunzz</td>
+<td>344621</td>
+<td>157897</td>
+<td>83452</td>
+<td>111746</td>
+<td>9938802</td>
+<td>72913</td>
+<td>100183</td>
+<td>0.7277981</td>
+<td>0.16452353</td>
+<td>2568</td>
+<td>4725</td>
+<td>0.5434921</td>
+<td>2.080458</td>
+<td>2314</td>
+<td>6455</td>
+<td>281403</td>
+<td>38815</td>
+<td>17821.08</td>
+<td>7122.5737</td>
+<td>157192.22</td>
+<td>6214</td>
+<td>9420</td>
+</tr>
+<tr>
+<td>1313</td>
+<td>CCandG</td>
+<td>326968</td>
+<td>110569</td>
+<td>96752</td>
+<td>135504</td>
+<td>7435014</td>
+<td>88790</td>
+<td>79795</td>
+<td>1.1127263</td>
+<td>0.21497534</td>
+<td>3056</td>
+<td>4722</td>
+<td>0.6471834</td>
+<td>2.638607</td>
+<td>22025</td>
+<td>39477</td>
+<td>186456</td>
+<td>71522</td>
+<td>7539.7153</td>
+<td>2648.805</td>
+<td>176382.23</td>
+<td>4512</td>
+<td>2976</td>
+</tr>
+<tr>
+<td>1314</td>
+<td>doche59</td>
+<td>655713</td>
+<td>340293</td>
+<td>164982</td>
+<td>181615</td>
+<td>7929526</td>
+<td>155031</td>
+<td>78618</td>
+<td>1.971953</td>
+<td>0.17167768</td>
+<td>3775</td>
+<td>4720</td>
+<td>0.7997881</td>
+<td>4.961555</td>
+<td>27364</td>
+<td>22697</td>
+<td>573920</td>
+<td>16023</td>
+<td>12074.737</td>
+<td>3258.2231</td>
+<td>170434.95</td>
+<td>10630</td>
+<td>5079</td>
+</tr>
+<tr>
+<td>1315</td>
+<td>vtcadre</td>
+<td>453673</td>
+<td>243468</td>
+<td>97584</td>
+<td>125923</td>
+<td>7545254</td>
+<td>86654</td>
+<td>70759</td>
+<td>1.2246357</td>
+<td>0.21487768</td>
+<td>3585</td>
+<td>4720</td>
+<td>0.7595339</td>
+<td>3.6076162</td>
+<td>29691</td>
+<td>31879</td>
+<td>42329</td>
+<td>319730</td>
+<td>7158.333</td>
+<td>2679.7458</td>
+<td>118747.57</td>
+<td>6004</td>
+<td>24040</td>
+</tr>
+<tr>
+<td>1316</td>
+<td>samer2</td>
+<td>308077</td>
+<td>176149</td>
+<td>66443</td>
+<td>95171</td>
+<td>5160388</td>
+<td>62987</td>
+<td>69047</td>
+<td>0.9122337</td>
+<td>0.16259336</td>
+<td>2290</td>
+<td>4719</td>
+<td>0.48527232</td>
+<td>3.5820212</td>
+<td>7443</td>
+<td>5373</td>
+<td>278593</td>
+<td>13544</td>
+<td>9917.059</td>
+<td>3400.7483</td>
+<td>50530.586</td>
+<td>2249</td>
+<td>875</td>
+</tr>
+<tr>
+<td>1317</td>
+<td>Dragowarrour</td>
+<td>260109</td>
+<td>69825</td>
+<td>9052</td>
+<td>188668</td>
+<td>6192155</td>
+<td>8220</td>
+<td>24360</td>
+<td>0.33743843</td>
+<td>0.11953884</td>
+<td>4021</td>
+<td>4717</td>
+<td>0.8524486</td>
+<td>2.5203729</td>
+<td>315</td>
+<td>1658</td>
+<td>85856</td>
+<td>168690</td>
+<td>2483.1997</td>
+<td>2330.239</td>
+<td>15176.771</td>
+<td>2564</td>
+<td>1026</td>
+</tr>
+<tr>
+<td>1318</td>
+<td>clopez</td>
+<td>566699</td>
+<td>257932</td>
+<td>172469</td>
+<td>159752</td>
+<td>8262238</td>
+<td>163114</td>
+<td>78552</td>
+<td>2.0765097</td>
+<td>0.17706901</td>
+<td>4084</td>
+<td>4713</td>
+<td>0.86653936</td>
+<td>4.1153426</td>
+<td>41362</td>
+<td>56129</td>
+<td>400497</td>
+<td>52872</td>
+<td>8961.25</td>
+<td>2814.1675</td>
+<td>243331.27</td>
+<td>5123</td>
+<td>10716</td>
+</tr>
+<tr>
+<td>1319</td>
+<td>Warhawk_Massace</td>
+<td>297100</td>
+<td>111643</td>
+<td>28251</td>
+<td>162296</td>
+<td>5867861</td>
+<td>26020</td>
+<td>6083</td>
+<td>4.2774944</td>
+<td>0.123697445</td>
+<td>3236</td>
+<td>4713</td>
+<td>0.6866115</td>
+<td>3.0379045</td>
+<td>5039</td>
+<td>171</td>
+<td>190691</td>
+<td>87254</td>
+<td>3197.0889</td>
+<td>930.60516</td>
+<td>54510.742</td>
+<td>201</td>
+<td>13744</td>
+</tr>
+<tr>
+<td>1320</td>
+<td>papa-machete</td>
+<td>285824</td>
+<td>104582</td>
+<td>69382</td>
+<td>122225</td>
+<td>7092507</td>
+<td>59913</td>
+<td>89721</td>
+<td>0.6677701</td>
+<td>0.21231912</td>
+<td>2640</td>
+<td>4712</td>
+<td>0.5602716</td>
+<td>2.417966</td>
+<td>6800</td>
+<td>13486</td>
+<td>203614</td>
+<td>33189</td>
+<td>13426.681</td>
+<td>6455.501</td>
+<td>51182.21</td>
+<td>9198</td>
+<td>19537</td>
+</tr>
+</tbody>
 <!--/WARHAWK_SVML/stats/Stats_CareerLeaderboard.jsp?start=1320&end=1331&statsStart=0&statsEnd=21&sortCol=10&sortOrder=1&gameMode=1-->
 <tbody>
 <tr>
